# 6DoF-Binauralizer

./: .gitmodules  BRIRProcessor.cpp  BRIRProcessor.h  CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md
